# dyse-code

./: .gitignore  .gitmodules  README.md
dysepy/: .gitignore  README.md  dyse.bash  package.xml
dysepy/data/install/: dependencies.txt  (+1 more)
dysepy/lib/: dysepy
dysepy/scripts/: buff_entrypoint.sh  buffbot.service  install.bash  install_buffpy.bash  install_env.bash  setup_robot.bash  setup_yolov5.bash
dysepy/src/: buffpy_tools.py  build_profile.py  cli.py  dysepy_tools.py  robot_description.py  robot_installer.py  robot_spawner.py  uml_generator.py
dysepy/tests/: build_test.py  run_test.py  usb_delay_test.py
src/dyse_rust/: Cargo.toml  README.md
src/dyse_rust/src/: lib.rs
src/dyse_rust/src/comms/: comms.rs  comms_node.rs  data_structures.rs  echo.rs  hid_interface.rs  hid_layer.rs  hid_reader.rs  hid_ros.rs  hid_writer.rs  hz.rs  mod.rs  robot_firmware.rs  sock_bringup.rs  socks.rs  test.rs
src/dyse_rust/src/rid/: data_structures.rs  hid_interface.rs  hid_reader.rs  hid_writer.rs  interface.rs  layer.rs  mod.rs  reader.rs  rid_sock.rs  robot_firmware.rs  test.rs  writer.rs
src/dyse_rust/src/sandbox/: lcm_tests.rs  mod.rs  reros.rs  rerun_demo.rs  sock_bringup.rs  sock_tests.rs  socks.rs
src/dyse_rust/src/socks/: data_structures.rs  echo.rs  hz.rs  message.rs  mod.rs  sender.rs  sock_bringup.rs  sock_tests.rs  sockapi.rs  socks.rs  task.rs
src/dyse_rust/src/utilities/: buffers.rs  data_structures.rs  loaders.rs  mod.rs  test.rs
src/dyse_rust/src/viz/: mod.rs  recorder.rs  rerun_sock.rs
src/firmware/: Makefile  README.md
src/rustpy/: Cargo.toml
(+62 files in other folders)
