[package]
name = "dyse_rust"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
glob = "0.3.1"
rand = "0.8.5"
hidapi = "2.2.0"
socket2 = "0.5.5"
bincode = "1.3.3"
yaml-rust = "0.4.5"
more-asserts = "0.3.1"
crossbeam-channel = "0.5.8"
serde = "1.0.190"



[[bin]]
name = "send"
path = "src/socks/sender.rs"

[[bin]]
name = "echo"
path = "src/socks/echo.rs"

[[bin]]
name = "hz"
path = "src/socks/hz.rs"
